# skybrush-server

./: .dockerignore  .env.example  .gitignore  .ignore  .pre-commit-config.yaml  .slugignore  .tags_swap  AGENTS.md  CHANGELOG.md  DEPENDENCIES.md  MANIFEST.in  NOTES.md  Pipfile  Procfile  README.md  flockwaved.spec  package-lock.json  pyinstaller.spec  pyproject.toml  pytest.ini  requirements.txt  setup.py  skybrushd-many-networks.jsonc  tbump.toml  tox.ini
assets/icons/: README.md
assets/icons/mac/: skybrushd.icns
debian/: changelog  control  copyright  flockwave-server.install  flockwave-server.links  flockwave-server.lintian-overrides  flockwave-server.service  rules  skybrush-server.install  skybrush-server.links  skybrush-server.service
debian/source/: lintian-overrides
doc/: make.py  mtc_support.md  ssl_support.md
etc/conf/: skybrush-indoor-dual.jsonc  skybrush-indoor.jsonc  skybrush-outdoor-dual-ip.jsonc  skybrush-outdoor-dual-udp.jsonc  skybrush-outdoor-octa-tcp.jsonc  skybrush-outdoor.jsonc  skybrush-virtual.jsonc
etc/deployment/: hook-flockwave.server.ext.debug.py  hook-flockwave.server.ext.mavlink.py  hook-flockwave.server.ext.socketio.vendor.engineio.py  hook-flockwave.spec.py  runtime_hook.py
etc/deployment/configs/: skybrush-indoor.jsonc  skybrush-outdoor.jsonc
etc/deployment/darwin-x64/: build.sh
etc/deployment/docker/: build.sh  pip.conf
etc/deployment/docker/amd64/: Dockerfile  entrypoint.sh
etc/deployment/linux/: skybrushd
etc/deployment/mac/: build.sh
etc/deployment/mac/files/: Distribution
etc/deployment/nsis/: build.sh  collect-win32-deps.py  skybrush.jsonc  skybrushd.bat  skybrushd.py  template.nsi
etc/deployment/pyarmor/: repack.py  skybrushd
etc/deployment/pyinstaller/: hook-flockwave.server.ext.frontend.py  hook-flockwave.server.ext.mavlink.py  hook-flockwave.server.ext.socketio.vendor.engineio.py  hook-flockwave.server.ext.socketio.vendor.engineio_v3.py  hook-flockwave.server.ext.socketio.vendor.engineio_v4.py  hook-flockwave.server.ext.webui.py  hook-flockwave.spec.py  hook-igrf_model.py  hook-lark.py  pyinstaller.spec
etc/deployment/pyinstaller/pre_safe_import_module/: hook-flockwave.protocols.py  hook-flockwave.py
etc/deployment/rpi/: collmot-init.service  network.cfg  run-tasks-at-boot  skybrush-console-frontend.json  skybrush.json  tty1-override.conf  ufw.conf
etc/docker/: build.sh
etc/docker/amd64/: Dockerfile  entrypoint.sh
etc/envs/: debian.cfg  heroku.cfg  rentit.cfg  snap.cfg
etc/scripts/: _apply-pyarmor-on-venv.sh  _build-nsis-installer.sh  apply-pyarmor-on-venv.sh  build-deb.sh  build-linux.sh  build-nsis-installer.sh  build-pyarmored-dist.sh  build-snap.sh  collect-win32-deps.py  deploy-to-rpi.sh  deploy.sh  docker.sh  switch_to_https_in_pipfile.sh
etc/ssl/: cert.pem
etc/wheels/win32/: crcmod-1.7-cp37-cp37m-win32.whl  crcmod-1.7-cp39-cp39-win32.whl  netifaces-0.11.0-cp39-cp39-win32.whl  pyrsistent-0.17.3-cp37-cp37m-win32.whl  pyrsistent-0.18.0-cp39-cp39-win32.whl
flockwave/server/: __init__.py  app.py  authentication.py  client_registry.py  commands.py  concurrency.py  config.py  connection.py  connection_registry.py  errors.py  heroku.py  launcher.py  logger.py  message_hub.py  model.py  networking.py  uav_registry.py  utils.py  version.py
flockwave/server/connections/: __init__.py  base.py  errors.py  factory.py  file.py  midi.py  reconnection.py  serial.py  socket.py  stream.py  supervision.py
flockwave/server/encoders/: base.py  json.py
flockwave/server/ext/: base.py  clocks.py  debugging.py  fake_connections.py  fake_uavs.py  gps.py  logger.py  manager.py  radiation.py  smpte_timecode.py  socketio.py  ssdp.py  system_clock.py  tcp.py  udp.py  zeroconf.py
flockwave/server/ext/api/: __init__.py  v1.py
flockwave/server/ext/debug/: __init__.py  extension.py
flockwave/server/model/: __init__.py  builders.py  channel.py  client.py  clock.py  commands.py  connection.py  constants.py  devices.py  errors.py  messages.py  metamagic.py  mixins.py  rate_limiters.py  registry.py  uav.py  vectors.py  world.py
flockwave/server/parsers/: base.py  delimiters.py
flockwave/server/registries/: __init__.py  base.py  channels.py  clients.py  clocks.py  connections.py  uavs.py
flockwave/server/static/: index.html
snap/: snapcraft.yaml
src/flockwave/: __init__.py  channels.py
src/flockwave/connections/: __init__.py  base.py  errors.py  factory.py  file.py  midi.py  serial.py  socket.py  stream.py  supervision.py  types.py
src/flockwave/encoders/: json.py  jsonrpc.py
src/flockwave/ext/: __init__.py  base.py  manager.py  utils.py
src/flockwave/gateway/: __init__.py  app.py  asgi_app.py  config.py  errors.py  launcher.py  logger.py  version.py  workers.py
src/flockwave/parsers/: __init__.py  base.py  delimiters.py  jsonrpc.py
src/flockwave/proxy/: __init__.py  app.py  config.py  launcher.py  logger.py  version.py
src/flockwave/server/: __init__.py  __main__.py  app.py  comm.py  commands.py  concurrency.py  config.py  configurator.py  errors.py  launcher.py  logger.py  message_handlers.py  message_hub.py  networking.py  ports.py  types.py  utils.py  version.py
src/skybrush/: __init__.py  formats.py  geofence.py  lights.py  player.py  rth_plan.py  show.py  trajectory.py  utils.py
test/: test_concurrency.py  test_crazyflie_trajectory.py  test_ext_mavlink_autopilots_ardupilot.py  test_ext_mavlink_packets.py  test_ext_mavlink_signing.py  test_ext_show_clock_synchronization.py  test_ext_show_config.py  test_ext_show_takeoff.py  test_led_lights_task.py  test_mission.py  test_model.py  test_model_error_set.py  test_preflight_check.py  test_progress_reporter.py  test_rate_limiters.py  test_show_formats.py  test_show_rth_plan.py  test_show_trajectory.py  test_show_utils.py  test_show_yaw_control.py  test_skybrush_formats.py  test_skybrush_player.py  test_skybrush_rth_plan.py  test_skybrush_trajectory.py  test_skybrush_utils.py  test_utils_formatting.py
test/test_ext_mavlink_autopilots_ardupilot/: param.pck
tests/: test_concurrency.py
typings/: cls.pyi
(+352 files in other folders)
